fixed article image alignment

--- a/css/template.css
+++ b/css/template.css
@@ -91,11 +91,14 @@ blockquote,.grey,.pagenavcounter{color:#bbb}
 
 .article-introtext p{font-weight:500;margin-top:0}
 .blog-image{margin-bottom:1.5em}
-.article-image{position:relative;overflow:hidden}
-.article-image .zoom-in{position:absolute;top:20px;right:20px;font-size:32px;color:#fff;opacity:0.4;text-shadow:1px 1px 1px #000}
+.article-image{position:relative;overflow:hidden;text-align:center}
+.article-image.pull-left,.article-image.pull-right{max-width:75%}
+.article-image.pull-left{margin:0 35px 0 0}
+.article-image.pull-right{margin:0 0 0 35px}
+.article-image .zoom-in{position:absolute;top:20px;right:20px;font-size:32px;color:#fff;opacity:0.4;text-shadow:1px 1px 1px #000;background:rgba(0,0,0,.4);padding:4px 6px 2px 6px;border-radius:4px}
 
-.caption{position:absolute;bottom:0px;background:rgba(0,0,0,0.4);padding:20px;width:100%;color:#fff;text-shadow:1px 1px 0 #000;box-shadow:inset 0 -5px 5px -5px rgba(0,0,0,0.5);z-index:3}
-.caption-inner{padding-left:20px;border-left:1px solid rgba(255,255,255,0.1);box-shadow:-1px 0 0 rgba(0,0,0,0.3)}
+.caption{position:absolute;bottom:0px;background:rgba(0,0,0,.4);padding:20px;width:100%;color:#fff;text-shadow:1px 1px 0 #000;box-shadow:inset 0 -5px 5px -5px rgba(0,0,0,.5);z-index:3;text-align:left}
+.caption-inner{padding-left:20px;border-left:1px solid rgba(255,255,255,.1);box-shadow:-1px 0 0 rgba(0,0,0,.3)}
 .caption .icon-picture{margin:5px 20px 0 5px;font-size:30px;color:#fff}
 
 .readmore,.modified{margin-bottom:0}
